--- a/Standard Library Types/Closures/Filter a sequence with a closure/task-info.yaml
+++ b/Standard Library Types/Closures/Filter a sequence with a closure/task-info.yaml
@@ -8,6 +8,6 @@ files:
     length: 38
     placeholder_text: /* Complete the closure here */
 - name: Cargo.toml
-  visible: true
+  visible: false
 - name: tests/output.txt
   visible: false
